# PACT

./: .gitignore  DEMO_SCRIPT.md  README.md  ai_demo.py  demo.py  pyproject.toml
Demo/: ai_demo.py  demo.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  styles.css  types.ts
dashboard/src/components/: ActivityLog.tsx  AgentConsole.tsx  DemoControls.tsx  DemoMenu.tsx  DemoTabs.tsx  SystemInfo.tsx  TopBar.tsx  TrustNetwork.tsx
dashboard/src/hooks/: usePolling.ts
docs/: PRD.md  rendu3_prototype_questionnaire.md  reunion_suivi_20mars.md  upgrade_idea.md
src/pact/: crypto.py  server.py  templates.py
src/pact/ai/: agent.py  tools.py
src/pact/demo/: __init__.py  orchestrator.py  router.py
tests/: conftest.py  test_crypto.py  test_discovery.py  test_handshake.py  test_interactions.py  test_templates.py  test_trust_network.py
